opam-version: "1.2"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "http://rizo.github.io/options"
doc: "http://rizo.github.io/options/doc"
license: "ISC"
dev-repo: "https://github.com/rizo/options.git"
bug-reports: "https://github.com/rizo/options/issues"

descr: "Optional values and operations"
tags: ["org:rizo" "option"]

available: [ ocaml-version >= "4.01.0"]

depends: [
  "jbuilder" {build}
  "order"
  "control"
]

build: [
  [ "jbuilder" "build" "-p" name "-j" jobs "@install" ]
]

