opam-version: "1.2"
maintainer: "Rizo Isrof <rizo@odis.io>"
authors: ["Rizo Isrof <rizo@odis.io>"]
homepage: "http://odis-labs.github.io/options"
doc: "http://odis-labs.github.io/options"
license: "ISC"
dev-repo: "https://github.com/odis-labs/options.git"
bug-reports: "https://github.com/odis-labs/options/issues"

synopsis: "Operations for optional values."
tags: ["org:odis" "option"]

available: [ ocaml-version >= "4.01.0"]

depends: [
  "dune" {build & >= "1.0"}
]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

